# substrate-ethereum

./: README.md
bridge-validator/: .gitignore  Cargo.toml
bridge-validator/src/: config.rs  ethereum_event_handler.rs  main.rs
chain-ui/: package.json
chain-ui/@types/: window.d.ts
chain-ui/contract/: DAIBridge.json
chain-ui/src/: app.jsx  index.html  index.tsx
ethereum-contract/: package.json  truffle-config.js
ethereum-contract/contracts/main/: DAIBridge.sol
ethereum-contract/migrations/: 2_deploy_bridge.js
substrate-chain/: Cargo.toml  README.md
substrate-chain/runtime/: Cargo.toml
substrate-chain/runtime/src/: lib.rs  nft.rs
substrate-chain/runtime/wasm/: Cargo.toml  build.sh
substrate-chain/runtime/wasm/src/: lib.rs
substrate-chain/src/: chain_spec.rs  cli.rs  main.rs  service.rs
