[package]
name = "bridge-validator"
version = "0.1.0"
authors = ["skoike <shunpei42ba@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.14.1"
env_logger = "0.6.2"
log = "0.4.0"
web3 = "0.8.0"
tokio = "1.8.4"
tokio-threadpool = "0.1.15"
futures = "0.1.29"